src/test/ui/specialization/min_specialization/specialize_on_trait.stderr
error: cannot specialize on trait `SpecMarker`
  --> $DIR/specialize_on_trait.rs:15:1
   |
LL | impl<T: SpecMarker> X for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

